--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://codeclysm.github.io/agora-ludica/"
 languageCode = "it-IT"
 title = "Agorà Ludica"
 
