--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://codeclysm.github.io/agora-ludica/"
+baseURL = "http://hugo.agoraludica.eu"
 languageCode = "it-IT"
 title = "Agorà Ludica"
 
